--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Microsponsors: Time is your greatest asset.">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <!-- CSS -->
-    <link rel="stylesheet" href="https://cdn.microsponsors.io/static/css/main.6a3f47a467.css">
+    <link rel="stylesheet" href="https://cdn.microsponsors.io/static/css/main.b036a49147.css">
     <!-- Font Awesome -->
     <link rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
@@ -75,7 +75,7 @@
             Sell, Buy and Browse
             &nbsp;<i class="fas fa-chevron-right"></i>
           </a>
-          <div class="ms-featured">
+          <div class="ms-featured is-5 is-size-7-mobile">
             Featured category:
             <a href="exchange.html?view=auctions&sort=category-decentraland">
               Decentraland &rarr;
@@ -83,7 +83,7 @@
           </div>
         </div>
         <div class="container ms-container--howthisworks">
-          <p>How it works</p>
+          <p class="is-5 is-size-7-mobile">How it works</p>
           <a href="javascript: void(0);"
             class="button is-primary is-inverse is-icon-only"
                 id="ms-btn-more-details">
@@ -341,5 +341,5 @@
 </html>
  <!-- VERSION
 git branch: master
-git sha: 9032ede3bdd161bfe3436e6d40e352ed9b7440cf
+git sha: 31ebef6f592be37de404e71eecca62c514804c71
  -->
