--- a/defi.html
+++ b/defi.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Microsponsors.io: FAQ</title>
+    <title>Microsponsors.io: DeFi</title>
     <meta name="description" content="Microsponsors: FAQ">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <!-- CSS -->
@@ -15,7 +15,7 @@
       integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
       crossorigin="anonymous">
   </head>
-  <body class="ms-body ms-body--static-info-pg">
+  <body class="ms-body ms-body--static-info-pg ms-body--static-info-pg__category">
 
     <section class="ms-info-main">
       <div class="container">
@@ -26,19 +26,45 @@
         </a>
       </div>
 
-      <h1 class="title is-1 is-size-2-mobile" style="margin-bottom: 60px;">Privacy Policy</h1>
-      <p>Microsponsors is committed to your privacy. There are currently no tracking beacons on the site. We are not collecting any information about you other than what you choose to share publicly when you Register.</p>
-      <p>Over time, we may add anonymized tracking beacons (without cookies) to help us improve the service; this data will not be sold. If and when we add these beacons, they will be opt-out for end-users.</p>
-      <p>Users of this site should understand that it is built on top of several layers of technology that keep public, immutable records of your activity.</p>
-      <p>Microsponsors' technology stack includes:
-        <br /><br />
-        - <a href="https://0x.org">0x.org</a> for auction bidding and exchange<br />
-        - <a href="https://ethereum.org">Ethereum</a> as a base layer blockchain infrastructure<br />
-        - <a href="https://3box.io">3Box.io</a> for user comments on individual tokens<br />
-        - <a href="https://3box.io">IPFS</a>, a distributed file system that serves as the underpinnings of 3Box.io
-        <br /><br />
-      Microsponsors strongly encourages you to understand the privacy implications of each of these technologies.
+      <a name="top"></a>
+      <h1 class="title is-size-1 is-size-2-mobile">
+        <span>Category:</span>
+        DeFi
+      </h1>
+
+      <div class="ms-category__explainer">
+      <p>
+        Click below to visit each featured profile, see their current time slot auctions and past activity.</a>
       </p>
+      </div>
+
+      <p>
+
+        <a class="is-block ms-alt-link" href="exchange.html?view=profile:0x56d9fb185343ff68484abb2964ad319728083cc9">
+          0xtracker.com
+        </a>
+
+        <a class="is-block ms-alt-link" href="exchange.html?view=profile:0x5b93ff82faaf241c15997ea3975419dddd8362c5">  Cooper Turley
+        </a>
+
+        <a class="is-block ms-alt-link" href="exchange.html?view=profile:0xF627E5F4BAd95a956468d8BB6Ee20b119F992E96">
+          BSpeak Newsletter (Japan)
+        </a>
+
+        <a class="is-block ms-alt-link" href="exchange.html?view=profile:0x0e4b522e314a408c24158407a05a84ff3798287a">  Dappstream.live
+        </a>
+
+        <a class="is-block ms-alt-link" href="exchange.html?view=profile:0xEbDb626C95a25f4e304336b1adcAd0521a1Bdca1">
+          Defiprime
+        </a>
+
+        <a class="is-block ms-alt-link" href="exchange.html?view=profile:0x4CCadB03B6D53273E565732f0a472dde82365201
+        ">
+          Playtoearn.online
+        </a>
+
+      </p>
+
       </div>
     </section>
 
