--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Microsponsors: Time is your greatest asset.">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <!-- CSS -->
-    <link rel="stylesheet" href="https://cdn.microsponsors.io/static/css/main.b036a49147.css">
+    <link rel="stylesheet" href="https://cdn.microsponsors.io/static/css/main.193ae71b4e.css">
     <!-- Font Awesome -->
     <link rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
@@ -76,9 +76,18 @@
             &nbsp;<i class="fas fa-chevron-right"></i>
           </a>
           <div class="ms-featured is-5 is-size-7-mobile">
-            Featured category:
-            <a href="exchange.html?view=auctions&sort=category-decentraland">
-              Decentraland &rarr;
+            Featured categories:
+            <br />
+            <a href="decentraland.html">
+              Decentraland builders &rarr;
+            </a>
+            <br />
+            <a href="defi.html">
+              DeFi &rarr;
+            </a>
+            <br />
+            <a href="art.html">
+              Art &rarr;
             </a>
           </div>
         </div>
@@ -341,5 +350,5 @@
 </html>
  <!-- VERSION
 git branch: master
-git sha: 31ebef6f592be37de404e71eecca62c514804c71
+git sha: 4ce05fdd5b05bdce030cf0f5b61077e74a3ebaf2
  -->
