--- a/decentraland.html
+++ b/decentraland.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Microsponsors: FAQ">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <!-- CSS -->
-    <link rel="stylesheet" href="https://cdn.microsponsors.io/static/css/main.193ae71b4e.css">
+    <link rel="stylesheet" href="https://cdn.microsponsors.io/static/css/main.8c2a114bbd.css">
     <!-- Font Awesome -->
     <link rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
@@ -61,11 +61,16 @@
           @eibrielbot
         </a>
 
+        <a class="is-block ms-alt-link" href="exchange.html?view=profile:0xd7FEB1289D0BF4786E5315aa24F157dc2cEcF178
+        ">
+          Darius Swarts
+        </a>
+
       </p>
 
-      <a class="ms-see-all-link" href="exchange.html?view=auctions&sort=category:decentraland">
+<!--       <a class="ms-see-all-link" href="exchange.html?view=auctions&sort=category:decentraland">
         See all #Decentraland builders &rarr;
-      </a>
+      </a> -->
 
       </div>
     </section>
@@ -149,5 +154,5 @@
 </html>
  <!-- VERSION
 git branch: master
-git sha: 4ce05fdd5b05bdce030cf0f5b61077e74a3ebaf2
+git sha: 08ab24927e1de93c9ba350d22747f6765546c9e1
  -->
