--- a/decentraland.html
+++ b/decentraland.html
@@ -63,7 +63,7 @@
 
         <a class="is-block ms-alt-link" href="exchange.html?view=profile:0xd7FEB1289D0BF4786E5315aa24F157dc2cEcF178
         ">
-          Darius Swarts
+          Daurius Swarts
         </a>
 
       </p>
