--- a/faq.html
+++ b/faq.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Microsponsors: FAQ">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <!-- CSS -->
-    <link rel="stylesheet" href="https://cdn.microsponsors.io/static/css/main.8c2a114bbd.css">
+    <link rel="stylesheet" href="https://cdn.microsponsors.io/static/css/main.4cc6d5b988.css">
     <!-- Font Awesome -->
     <link rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
@@ -405,6 +405,6 @@
   <!-- *** VERSION INFO *** -->
 </html>
  <!-- VERSION
-git branch: master
-git sha: 08ab24927e1de93c9ba350d22747f6765546c9e1
+git branch: hamburger
+git sha: ef8d1cbe1d95a0e0e897363b7d9292e8bc5e4acc
  -->
