--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Microsponsors: Time is your greatest asset.">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <!-- CSS -->
-    <link rel="stylesheet" href="https://cdn.microsponsors.io/static/css/main.8c2a114bbd.css">
+    <link rel="stylesheet" href="https://cdn.microsponsors.io/static/css/main.4cc6d5b988.css">
     <!-- Font Awesome -->
     <link rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
@@ -62,7 +62,7 @@
 
           <div class="columns">
 
-            <div class="ms-quickstart__sponsors column is-6">
+            <div class="ms-quickstart__sponsors column is-5">
               <h3 class="ms-quickstart__heading">I am a Sponsor:</h3>
               <a href="exchange.html"
                 class="button is-primary is-medium is-blue is-emphasized">
@@ -70,25 +70,15 @@
                 &nbsp;<i class="fas fa-chevron-right"></i>
               </a>
               <div class="ms-quickstart__links is-5 is-size-7-mobile">
-                Featured creators:
-                <br />
-                <a href="decentraland.html">
-                  Decentraland Builders &rarr;
-                </a>
-                <br />
-                <a href="defi.html">
-                  DeFi Marketing &rarr;
-                </a>
-                <br />
-                <a href="art.html">
-                  Art &rarr;
-                </a>
+                Bidding is FREE and does not require registration!
+                Check it out &rarr;
               </div>
             </div>
 
-            <div class="column is-2">&nbsp;</div>
+            <div class="column is-1 ms-has-border">&nbsp;</div>
+            <div class="column is-1">&nbsp;</div>
 
-            <div class="ms-quickstart__creators column is-4">
+            <div class="ms-quickstart__creators column is-5">
               <h3 class="ms-quickstart__heading">I am a Creator:</h3>
               <a href="exchange.html?view=registry"
                 class="button is-primary is-green is-medium is-emphasized">
@@ -359,6 +349,6 @@
   <!-- *** VERSION INFO *** -->
 </html>
  <!-- VERSION
-git branch: master
-git sha: 08ab24927e1de93c9ba350d22747f6765546c9e1
+git branch: hamburger
+git sha: ef8d1cbe1d95a0e0e897363b7d9292e8bc5e4acc
  -->
