--- a/faq.html
+++ b/faq.html
@@ -405,6 +405,6 @@
   <!-- *** VERSION INFO *** -->
 </html>
  <!-- VERSION
-git branch: hamburger
-git sha: ef8d1cbe1d95a0e0e897363b7d9292e8bc5e4acc
+git branch: master
+git sha: a7c06c0e1fd4064b4e91f749925fac1003167edb
  -->
